  http://bugs.python.org/issue8396 .
  (Parth Malwankar, #413406)

* ``bzr update`` when a pending merge in the working tree has been merged
  into the master branch will no longer claim that old commits have become
  pending merges. (Robert Collins, #562079)

* ``bzrlib.mutabletree.MutableTree.commit`` will now support a passed in
  config as in previous versions of bzrlib. (Robert Collins)

* Help messages generated by ``RegistryOption.from_kwargs`` list the
  switches in alphabetical order, rather than in an undefined order.
  (Martin von Gagern, #559409)

* Make sure the ``ExecutablePath`` and ``InterpreterPath`` are set in
  Apport crash reports, to avoid "This problem report applies to a program
  which is not installed any more" error.
  (Martin Pool, James Westby, #528114)

* Reset ``siginterrupt`` flag to False every time we handle a signal
  installed with ``set_signal_handler(..., restart_syscall=True)`` (from
  ``bzrlib.osutils``.  Reduces the likelihood of "Interrupted System Call"
  errors after two window resizes.
  (Andrew Bennetts)

* When invoked with a range revision, ``bzr log`` doesn't show revisions
  that are not part of the ancestry anymore.
  (Vincent Ladeuil, #474807)

Improvements
************

* ``bzr commit`` will prompt before using a commit message that was
  generated by a template and not edited by the user.
  (Robert Collins, #530265)

* ``bzr diff`` read-locks the trees and branches only once, saving about
  10-20ms on ``bzr diff`` in a bzr.dev tree.
  (Andrew Bennetts)

* ``bzr missing`` read-locks the branches only once.
  (Andrew Bennetts)
  
* ``bzr pull`` locks the branches and tree only once.
  (Andrew Bennetts)
  
* Index lookups in pack repositories search recently hit pack files first.  
  In repositories with many pack files this can greatly reduce the
  number of files accessed, the number of bytes read, and the number of
  read calls.  An incremental pull via plain HTTP takes half the time and