@@ -40,6 +40,9 @@ Bug Fixes
 * ``bzrlib.mutabletree.MutableTree.commit`` will now support a passed in
   config as in previous versions of bzrlib. (Robert Collins)
 
+* Fix glitch in the warning about unclean trees display.
+  (Vincent Ladeuil, #562665)
+
 * Help messages generated by ``RegistryOption.from_kwargs`` list the
   switches in alphabetical order, rather than in an undefined order.
   (Martin von Gagern, #559409)
